stopped username from wrapping…

--- a/src/components/user_card/user_card.scss
+++ b/src/components/user_card/user_card.scss
@@ -255,6 +255,8 @@
     margin-right: 1em;
     font-size: 1.1em;
     grid-area: name;
+    white-space: nowrap;
+    max-width: 100%;
   }
 
   .user-meta {
